passage du DtoMapper en component non statique